# rom-trading-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: goal.yaml  strategy.yaml
src/trading_agent/: backtest.py  broker_paper.py  cli.py  config.py  data.py  indicators.py  loop.py  reflection.py  scoring.py  storage.py  strategy.py
tests/: test_backtest.py  test_broker_paper.py  test_cli_backtest.py  test_cli_tools.py  test_config.py  test_data_csv.py  test_indicators.py  test_reflection.py  test_scoring.py  test_storage.py  test_strategy.py
