[build-system]
requires = [
  "setuptools>=68",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "rom-trading-agent"
version = "0.1.0"
description = "Local-first paper-trading research agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml",
  "pandas",
  "numpy",
  "typer",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
trading-agent = "trading_agent.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
